--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Header -->
   <header>
-    <img src="path-to-your-logo" alt="Natcho Apps Logo">
+    <img src="logo.png" alt="Natcho Apps Logo">
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
