--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Natcho Apps</title>
+  <style>
+    header {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh; /* adjust this value to your needs */
+    }
+  </style>
   <!-- Remember to include your CSS and JS files here -->
 </head>
 <body>
