--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       align-items: center;
       height: 100vh; /* adjust this value to your needs */
     }
+    footer {
+      text-align: center;
+    }
   </style>
   <!-- Remember to include your CSS and JS files here -->
 </head>
@@ -18,12 +21,11 @@
   <!-- Header -->
   <header>
     <img src="logo.png" alt="Natcho Apps Logo">
-    
   </header>
 
   <!-- Footer -->
   <footer>
-    <p>© 2023 Natcho Apps</p>
+    <p>© 2023 Natcho Apps. <a href="privacy_policy_url">Privacy Policy</a></p>
   </footer>
 
 </body>
