--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2023 Natcho Apps. <a href="privacy_policy_url">Privacy Policy</a></p>
+    <p>© 2023 Natcho Apps. <a href="privacy_policy.html">Privacy Policy</a></p>
   </footer>
 
 </body>
