--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh; /* adjust this value to your needs */
+      height: 50vh; /* reduced from 100vh to 50vh */
     }
     footer {
       text-align: center;
