--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <title>Natcho Apps</title>
   <style>
-    header {
+    body {
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      height: 50vh; /* reduced from 100vh to 50vh */
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    header {
+      padding: 20px;
     }
     footer {
       text-align: center;
@@ -17,16 +22,13 @@
   <!-- Remember to include your CSS and JS files here -->
 </head>
 <body>
-
   <!-- Header -->
   <header>
     <img src="logo.png" alt="Natcho Apps Logo">
   </header>
-
   <!-- Footer -->
   <footer>
     <p>© 2023 Natcho Apps. <a href="privacy_policy.html">Privacy Policy</a></p>
   </footer>
-
 </body>
 </html>
