--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <!-- Header -->
   <header>
-    <img src="logo.png" alt="Natcho Apps Logo">
+    <img src="natchologo.png" alt="Natcho Apps Logo">
   </header>
   <!-- Footer -->
   <footer>
