--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -21,13 +21,18 @@
     p, li {
       color: #666;
     }
+    .title-image {
+      width: 100%;
+    }
   </style>
 </head>
 <body>
 
   <div class="container">
+    <img src="natchologo.png" alt="Title Image" class="title-image">
     <h1>Privacy Policy</h1>
     <p>Effective Date: July 04, 2023</p>
+
 
     <p>This Privacy Policy describes how our application ("App," "we," "us," or "our") collects, uses, and shares information when you download, install, access, or use our App.</p>
 
