--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -29,7 +29,7 @@
 <body>
 
   <div class="container">
-    <img src="natchologo.png" alt="Title Image" class="title-image">
+    <img src="napriv.png" alt="Title Image" class="title-image">
     <h1>Privacy Policy</h1>
     <p>Effective Date: July 04, 2023</p>
 
