--- a/message.html
+++ b/message.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>Be safe during the hot season!</h1>
+    <h1>Be safe during the summer season!</h1>
     <p>Remember to stay hydrated and protect yourself from the sun.</p>
 </body>
 </html>
