--- a/message.html
+++ b/message.html
@@ -6,17 +6,64 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin-top: 100px;
+            margin: 0;
+            padding: 20px;
             background-color: #fff8e1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
         }
         h1 {
             color: #ff6d00;
             font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 1.2em;
+            color: #333;
+            margin-bottom: 30px;
+        }
+        .sun {
+            width: 120px;
+            height: 120px;
+            background: radial-gradient(circle, #ffde00 30%, #ff8c00 100%);
+            border-radius: 50%;
+            box-shadow: 0 0 50px #ff8c00;
+            opacity: 0;
+            animation: fadeIn 2s ease-in-out forwards;
+            animation-delay: 1s;
+            margin-top: 20px;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.8); }
+            to { opacity: 1; transform: scale(1); }
+        }
+        .safety-tips {
+            background-color: rgba(255,255,255,0.7);
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 30px;
+            max-width: 500px;
         }
     </style>
 </head>
 <body>
     <h1>Be safe during the summer season!</h1>
     <p>Remember to stay hydrated and protect yourself from the sun.</p>
+    
+    <div class="sun"></div>
+    
+    <div class="safety-tips">
+        <h3>Safety Tips:</h3>
+        <ul style="text-align: left;">
+            <li>Drink plenty of water throughout the day</li>
+            <li>Wear sunscreen with SPF 30+</li>
+            <li>Seek shade during peak hours (10am-4pm)</li>
+            <li>Wear light, loose-fitting clothing</li>
+            <li>Never leave children or pets in parked vehicles</li>
+        </ul>
+    </div>
 </body>
 </html>
