--- a/message.html
+++ b/message.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Hot Summer Safety</title>
     <style>
         body {
@@ -14,11 +15,13 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
+            -webkit-text-size-adjust: 100%;
         }
         h1 {
             color: #ff6d00;
             font-size: 2.5em;
             margin-bottom: 20px;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
         }
         p {
             font-size: 1.2em;
@@ -34,7 +37,7 @@
             opacity: 0;
             animation: fadeIn 2s ease-in-out forwards;
             animation-delay: 1s;
-            margin-top: 20px;
+            margin: 20px 0;
         }
         @keyframes fadeIn {
             from { opacity: 0; transform: scale(0.8); }
@@ -44,8 +47,18 @@
             background-color: rgba(255,255,255,0.7);
             padding: 20px;
             border-radius: 10px;
-            margin-top: 30px;
-            max-width: 500px;
+            margin: 30px 0;
+            max-width: 90%;
+            width: 500px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        ul {
+            text-align: left;
+            padding-left: 20px;
+        }
+        li {
+            margin-bottom: 10px;
+            font-size: 1.1em;
         }
     </style>
 </head>
@@ -57,7 +70,7 @@
     
     <div class="safety-tips">
         <h3>Safety Tips:</h3>
-        <ul style="text-align: left;">
+        <ul>
             <li>Drink plenty of water throughout the day</li>
             <li>Wear sunscreen with SPF 30+</li>
             <li>Seek shade during peak hours (10am-4pm)</li>
